# learn-opengl-rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
resources/models/: Sting-Sword.mtl  container.mtl  container_emissive.mtl  ferris3d_v1.0.mtl
src/: camera.rs  macros.rs  main.rs  mesh.rs  model.rs  shader.rs
src/_1_getting_started/: _1_0_hello_window.rs  _2_0_hello_triangle.rs  _2_1_hello_triangle_ex1.rs  _2_2_hello_triangle_ex2.rs  _2_3_hello_triangle_ex3.rs  _3_0_shaders.rs  _3_1_shaders_ex1.rs  _3_2_shaders_ex2.rs  _3_3_shaders_ex3.rs  _4_0_textures.rs  _4_1_textures_ex1.rs  _4_2_textures_ex2.rs  _4_3_textures_ex3.rs  _4_4_textures_ex4.rs  _5_0_transformations.rs  _5_1_transformations_ex1.rs  _5_2_transformations_ex2.rs  _6_0_coordinate_systems.rs  _6_1_coordinate_systems_ex1.rs  _6_2_coordinate_systems_ex2.rs  _6_3_coordinate_systems_ex3.rs  _7_0_camera.rs  _7_1_camera_class.rs  _7_1_camera_ex1.rs  _7_2_camera_class.rs  _7_2_camera_ex2.rs  mod.rs
src/_2_lighting/: _1_0_colors.rs  _2_0_basic_lighting.rs  _2_1_basic_lighting_ex1.rs  _2_2_basic_lighting_ex2.rs  _2_3_basic_lighting_ex3.rs  _2_4_basic_lighting_ex4.rs  _3_0_materials.rs  _3_1_materials_ex1.rs  _3_2_materials_ex2.rs  _4_0_lighting_maps.rs  _4_1_lighting_maps_ex1.rs  _4_2_lighting_maps_ex2.rs  _4_3_lighting_maps_ex3.rs  _4_4_lighting_maps_ex4.rs  _5_0_light_casters.rs  _5_1_light_casters_ex1.rs  _5_e_light_casters_extra.rs  _6_0_multiple_lights.rs  _6_1_multiple_lights_ex1.rs  mod.rs
src/_3_model_loading/: _1_0_models.rs  _1_model.rs  mod.rs  test.rs
src/_4_advanced_opengl/: _1_0_depth_buffer.rs  (+8 more)
(+51 files in other folders)
