[package]
name = "learn-opengl-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
assimp = "0.3.1"
gl = "0.14.0"
glfw = "0.59.0"
image = "0.25.6"
nalgebra-glm = "0.19.0"

[features]
default = [
    "chapter-1",
    "chapter-2",
    "chapter-3",
]
chapter-1 = []
chapter-2 = []
chapter-3 = []
chapter-4 = []
chapter-5 = []
chapter-6 = []
chapter-7 = []
