[package]
name = "learn-opengl-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
gl = "0.14.0"
glfw = "0.59.0"
image = "0.25.6"
nalgebra-glm = "0.19.0"
tobj = "4.0.3"

[features]
default = [
    "chapter-1",
    "chapter-2",
    "chapter-3",
]
chapter-1 = []
chapter-2 = []
chapter-3 = []
chapter-4 = []
chapter-5 = []
chapter-6 = []
chapter-7 = []
